about me responsive modifications Unit 1  Lesson 6  Project 2

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,11 @@ body {
   font-family: "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+@media only screen and (max-width: 500px) {
+    .header_sec {
+        font-size: 1.5em;
+    }
+}
 .header_sec {
   background-image:
      url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/259845/sparkler1.jpg');
